--- a/css/main.scss
+++ b/css/main.scss
@@ -13,9 +13,9 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       rgb(58, 8, 238);
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #a8d2dd;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
